--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "customize-cra": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "utf8": "^3.0.0",
+    "web-vitals": "^1.0.1",
+    "webpack": "^5.64.4"
   },
   "scripts": {
     "start": "react-scripts start",
