--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "classnames": "^2.3.1",
     "css-loader": "4.3.0",
     "customize-cra": "^1.0.0",
     "dotenv": "8.2.0",
@@ -158,5 +159,9 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0"
   }
 }
