--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^3.0.19",
     "less": "^4.1.2",
     "less-loader": "^7.3.0"
   }
